--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
                             <input style="display: none;" type="text" name="hidden" />
 
-                            <button style="cursor: pointer;" class="big-button button-submit">Придбати зараз</button>
+                            <button style="cursor: pointer;" class="button big-button button-submit">Придбати зараз</button>
 
                         </form>
 
@@ -240,7 +240,7 @@
 
             <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
             <script src="./js/my-script.js" defer></script>
-            <script src="js/countdown.js"></script>
+            <script src="js/countdown.js" defer></script>
 
             <script type="text/javascript">
                 function updateDates() {
